@@ -6,6 +6,10 @@ not released
 - fix issue66: "devpi use hpk/dev" can now switch between URLs
   if user/index is mounted on a subpath.
 
+- fix issue71: allow pip/setuptools like requirements specs
+  with the test subcommand, e.g.  "devpi test 'pkg>=1.0'".
+  Thanks Sebastian Rahlf for the PR.
+
 1.2
 -------------------------------
 
